istio-demo/AppV1.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ua-app-v1
  namespace: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ua-app
      version: v1
  template:
    metadata:
      labels:
        app: ua-app
        version: v1
        istio: monitor
    spec:
      containers:
        - image: islandrabbit2024/eksistiodemo:latest
          imagePullPolicy: Always
          name: ua-app
          ports:
            - name: http
              containerPort: 8080
