istio-demo/Gateway.yaml
---
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: api
  namespace: production
spec:
  selector:
    #The gateway will be applied to the proxy running on a pod with labels istio: ingressgateway
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - app.devopsbyexample.com
